--- a/WebAdvert.SearchApi/WebAdvert.SearchApi/Properties/launchSettings.json
+++ b/WebAdvert.SearchApi/WebAdvert.SearchApi/Properties/launchSettings.json
@@ -23,6 +23,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5011;http://localhost:5010"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
