--- a/WebAdvert.SearchApi/WebAdvert.SearchApi/WebAdvert.SearchApi.csproj
+++ b/WebAdvert.SearchApi/WebAdvert.SearchApi/WebAdvert.SearchApi.csproj
@@ -2,10 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>0d4c8ba9-6eac-4652-a1b9-344ac526186d</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AWS.Logger.AspNetCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="NEST" Version="7.8.2" />
   </ItemGroup>
 
